[package]
name = "oxios-web"
version = "1.3.0"
edition = "2024"
description = "Web dashboard channel for Oxios"
license = "MIT"
repository = "https://github.com/a7garden/oxios"
exclude = ["frontend/target/*", "static/wasm/*.wasm", "static/assets/*.wasm"]
include = ["src/**", "web/dist/**", "static/**", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
oxios-gateway = { version = "1.3.0", path = "../../crates/oxios-gateway" }
oxios-kernel = { version = "1.3.0", path = "../../crates/oxios-kernel", default-features = false, features = ["sqlite-memory"] }
oxios-markdown = { version = "1.3.0", path = "../../crates/oxios-markdown" }
oxios-ouroboros = { version = "1.3.0", path = "../../crates/oxios-ouroboros" }
oxios-calendar = { version = "1.3.0", path = "../../crates/oxios-calendar" }
# oxi-ai re-exported via oxi-sdk — no direct dependency needed
oxi-sdk = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { workspace = true }
zip = { workspace = true }
rust-embed = { version = "8", features = ["mime-guess"] }
dirs = { workspace = true }
mime_guess = "2"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
tempfile = { workspace = true }
