[package]
name = "oxios-frontend"
version = "0.2.0-alpha"
edition = "2021"
description = "Oxios Dioxus-based web frontend"
license = "MIT"

[workspace]

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
gloo-net = "0.6"
futures-util = "0.3"
web-sys = "0.3"
wasm-bindgen = "0.2"